--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,4 @@
 <!-- start custom footer snippets -->
 <a href="/sitemap/">Sitemap</a>
+<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=FlZO_c8dHDNXxujbx7ZOPIbuKCTACu0V-LxqNNDaSY0"></script>
 <!-- end custom footer snippets -->
